@@ -2,11 +2,11 @@ package uk.gov.hmcts.reform.wacaseeventhandler.controllers;
 
 import io.restassured.response.Response;
 import lombok.extern.slf4j.Slf4j;
-import org.junit.Ignore;
 import org.junit.Test;
 import uk.gov.hmcts.reform.wacaseeventhandler.domain.camunda.WarningValues;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 
 import static java.util.concurrent.TimeUnit.MILLISECONDS;
@@ -18,13 +18,7 @@ import static org.hamcrest.CoreMatchers.notNullValue;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 
-/**
- * Functional tests for non-IAC requirements. These tests are executed against dummy events
- * defined in ia-task-configuration in src/main/resources/nonprod folder.
- *
- */
 @Slf4j
-@Ignore("These tests are related to Non-IAC requirements which are not part of production dmns.")
 public class WarningEventHandlerControllerTest extends CaseEventHandlerControllerTest {
 
     /**
@@ -34,9 +28,16 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
     public void given_caseId_with_multiple_tasks_and_same_category_when_warning_raised_then_mark_tasks_with_warnings() {
         String caseIdForTask1 = UUID.randomUUID().toString();
 
-        // Initiate task1, category (Case progression)
-        sendMessage(caseIdForTask1, "submitCase", null,
-                    "caseUnderReview", false);
+        // Initiate task1
+        sendMessage(
+            caseIdForTask1,
+            "submitCase",
+            null,
+            "caseUnderReview",
+            false,
+            "WA",
+            "WaCaseType"
+        );
 
         Response response = findTasksByCaseId(
             caseIdForTask1, 1);
@@ -48,16 +49,21 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
             .extract()
             .path("[0].id");
 
-        // test for workingDaysAllowed  = 5
         Response responseTaskDetails = findTaskDetailsForGivenTaskId(task1Id);
         assertDelayDuration(responseTaskDetails);
 
-        // initiate task2, category (Case progression)
-        sendMessage(caseIdForTask1, "submitCase", null,
-                    "caseUnderReview", false);
+        // initiate task2 with same caseId
+        sendMessage(
+            caseIdForTask1,
+            "submitCase",
+            null,
+            "caseUnderReview",
+            false,
+            "WA",
+            "WaCaseType"
+        );
 
-        response = findTasksByCaseId(
-            caseIdForTask1, 2);
+        response = findTasksByCaseId(caseIdForTask1, 2);
 
         final String task2Id = response
             .then()
@@ -67,15 +73,22 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
             .path("[1].id");
 
         // send warning message
-        sendMessage(caseIdForTask1, "_DUMMY_makeAnApplication",
-                    "", "", false);
+        sendMessage(
+            caseIdForTask1,
+            "_DUMMY_makeAnApplication",
+            "",
+            "",
+            false,
+            "WA",
+            "WaCaseType"
+        );
 
         String warningsAsJson = "[{\"warningCode\":\"TA01\","
-            + "\"warningText\":\"There is an application task which "
-            + "might impact other active tasks\"},"
-            + "{\"warningCode\":\"TA02\","
-            + "\"warningText\":\"There is another task on this case that needs your attention\"}"
-            + "]";
+                                + "\"warningText\":\"There is an application task which "
+                                + "might impact other active tasks\"},"
+                                + "{\"warningCode\":\"TA02\","
+                                + "\"warningText\":\"There is another task on this case that needs your attention\"}"
+                                + "]";
         // check for warnings flag on both the tasks
         assertTaskHasMultipleWarnings(caseIdForTask1, task1Id, new WarningValues(warningsAsJson));
         assertTaskHasMultipleWarnings(caseIdForTask1, task2Id, new WarningValues(warningsAsJson));
@@ -91,12 +104,18 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
     public void given_caseId_with_single_task_and_same_category_when_warning_raised_then_mark_tasks_with_warnings() {
         String caseIdForTask1 = UUID.randomUUID().toString();
 
-        // Initiate task1, category (Case progression)
-        sendMessage(caseIdForTask1, "submitCase", null,
-                    "caseUnderReview", false);
+        // Initiate task1
+        sendMessage(
+            caseIdForTask1,
+            "submitCase",
+            null,
+            "caseUnderReview",
+            false,
+            "WA",
+            "WaCaseType"
+        );
 
-        Response response = findTasksByCaseId(
-            caseIdForTask1, 1);
+        Response response = findTasksByCaseId(caseIdForTask1, 1);
 
         String task1Id = response
             .then()
@@ -105,25 +124,32 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
             .extract()
             .path("[0].id");
 
-        // test for workingDaysAllowed  = 5
+        // test for workingDaysAllowed
         Response responseTaskDetails = findTaskDetailsForGivenTaskId(task1Id);
         assertDelayDuration(responseTaskDetails);
 
         // send warning message
-        sendMessage(caseIdForTask1, "_DUMMY_makeAnApplication",
-                    "", "", false);
+        sendMessage(
+            caseIdForTask1,
+            "_DUMMY_makeAnApplication",
+            "",
+            "",
+            false,
+            "Wa",
+            "WaCaseType"
+        );
 
         String warningsAsJson = "[{\"warningCode\":\"TA01\","
-            + "\"warningText\":\"There is an application task which "
-            + "might impact other active tasks\"},"
-            + "{\"warningCode\":\"TA02\","
-            + "\"warningText\":\"There is another task on this case that needs your attention\"}"
-            + "]";
+                                + "\"warningText\":\"There is an application task which "
+                                + "might impact other active tasks\"},"
+                                + "{\"warningCode\":\"TA02\","
+                                + "\"warningText\":\"There is another task on this case that needs your attention\"}"
+                                + "]";
         // check for warnings flag on both the tasks
         assertTaskHasMultipleWarnings(caseIdForTask1, task1Id, new WarningValues(warningsAsJson));
 
         // tear down all tasks
-        tearDownMultipleTasks(Arrays.asList(task1Id), "completed");
+        tearDownMultipleTasks(List.of(task1Id), "completed");
     }
 
 
@@ -136,8 +162,15 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
         String caseIdForTask1 = UUID.randomUUID().toString();
 
         // Initiate task1 , category (timeExtension)
-        sendMessage(caseIdForTask1, "submitTimeExtension", "",
-                    null, false);
+        sendMessage(
+            caseIdForTask1,
+            "submitTimeExtension",
+            "",
+            null,
+            false,
+            "WA",
+            "WaCaseType"
+        );
 
         Response response = findTasksByCaseId(
             caseIdForTask1, 1);
@@ -149,8 +182,15 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
             .path("[0].id");
 
         // initiate task2, category (followUpOverdue)
-        sendMessage(caseIdForTask1, "requestCaseBuilding", null,
-                    "caseBuilding", false);
+        sendMessage(
+            caseIdForTask1,
+            "requestCaseBuilding",
+            null,
+            "caseBuilding",
+            false,
+            "WA",
+            "WaCaseType"
+        );
 
         response = findTasksByCaseId(
             caseIdForTask1, 2);
@@ -163,8 +203,15 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
             .path("[1].id");
 
         // initiate task3, category (caseProgression)
-        sendMessage(caseIdForTask1, "listCma", null,
-                    "cmaListed", false);
+        sendMessage(
+            caseIdForTask1,
+            "listCma",
+            null,
+            "cmaListed",
+            false,
+            "WA",
+            "WaCaseType"
+        );
 
         response = findTasksByCaseId(
             caseIdForTask1, 3);
@@ -177,17 +224,24 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
             .path("[2].id");
 
         // send warning message
-        sendMessage(caseIdForTask1, "_DUMMY_makeAnApplication101",
-                    "", "", false);
+        sendMessage(
+            caseIdForTask1,
+            "_DUMMY_makeAnApplication101",
+            "",
+            "",
+            false,
+            "WA",
+            "WaCaseType"
+        );
 
         waitSeconds(5);
 
         String timeExtensionWarning = "[{\"warningCode\":\"Code101\","
-            + "\"warningText\":\"Warning Text 101\"}]";
+                                      + "\"warningText\":\"Warning Text 101\"}]";
         WarningValues timeExtensionWarningValues = new WarningValues(timeExtensionWarning);
 
         String followUpOverdueWarning = "[{\"warningCode\":\"Code102\","
-            + "\"warningText\":\"Warning Text 102\"}]";
+                                        + "\"warningText\":\"Warning Text 102\"}]";
         WarningValues overdueWarningValues = new WarningValues(followUpOverdueWarning);
 
         // check for warnings flag on both the tasks
@@ -212,30 +266,56 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
         final String caseId1Task1Id = createTaskWithId(
             caseId1,
             "listCma",
-            "", "cmaListed", false,
-            taskIdDmnColumn
+            "",
+            "cmaListed",
+            false,
+            taskIdDmnColumn,
+            "WA",
+            "WaCaseType"
         );
 
         //caseId1 with category Case progression
         String taskId2DmnColumn = "reviewRespondentResponse";
         String caseId2 = UUID.randomUUID().toString();
-        final String caseId2Task1Id = createTaskWithId(caseId2, "uploadHomeOfficeAppealResponse",
-                                                       "", "respondentReview",
-                                                       false, taskId2DmnColumn);
+        final String caseId2Task1Id = createTaskWithId(
+            caseId2,
+            "uploadHomeOfficeAppealResponse",
+            "",
+            "respondentReview",
+            false,
+            taskId2DmnColumn,
+            "WA",
+            "WaCaseType"
+        );
+
         // Then cancel all tasks on both caseIDs
-        sendMessage(caseId1, "_DUMMY_makeAnApplication",
-                    "", "", false);
+        sendMessage(
+            caseId1,
+            "_DUMMY_makeAnApplication",
+            "",
+            "",
+            false,
+            "WA",
+            "WaCaseType"
+        );
         waitSeconds(5);
-        sendMessage(caseId2, "_DUMMY_makeAnApplication",
-                    "", "", false);
+        sendMessage(
+            caseId2,
+            "_DUMMY_makeAnApplication",
+            "",
+            "",
+            false,
+            "WA",
+            "WaCaseType"
+        );
         waitSeconds(5);
 
         String warningsAsJson = "[{\"warningCode\":\"TA01\","
-            + "\"warningText\":\"There is an application task which "
-            + "might impact other active tasks\"},"
-            + "{\"warningCode\":\"TA02\","
-            + "\"warningText\":\"There is another task on this case that needs your attention\"}"
-            + "]";
+                                + "\"warningText\":\"There is an application task which "
+                                + "might impact other active tasks\"},"
+                                + "{\"warningCode\":\"TA02\","
+                                + "\"warningText\":\"There is another task on this case that needs your attention\"}"
+                                + "]";
         // check for warnings flag on both the tasks
         assertTaskHasMultipleWarnings(caseId1, caseId1Task1Id, new WarningValues(warningsAsJson));
         assertTaskHasMultipleWarnings(caseId2, caseId2Task1Id, new WarningValues(warningsAsJson));
@@ -252,11 +332,17 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
     public void given_caseID_when_action_is_warn_with_same_warnings_then_add_the_warning_only_once() {
         String caseIdForTask1 = UUID.randomUUID().toString();
 
-        sendMessage(caseIdForTask1, "submitCase", null,
-                    "caseUnderReview", false);
+        sendMessage(
+            caseIdForTask1,
+            "submitCase",
+            null,
+            "caseUnderReview",
+            false,
+            "WA",
+            "WaCaseType"
+        );
 
-        Response response = findTasksByCaseId(
-            caseIdForTask1, 1);
+        Response response = findTasksByCaseId(caseIdForTask1, 1);
 
         String task1Id = response
             .then()
@@ -265,19 +351,26 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
             .extract()
             .path("[0].id");
 
-        sendMessage(caseIdForTask1, "_DUMMY_makeAnApplication103",
-                    "", "", false);
+        sendMessage(
+            caseIdForTask1,
+            "_DUMMY_makeAnApplication103",
+            "",
+            "",
+            false,
+            "WA",
+            "WaCaseType"
+        );
         waitSeconds(5);
 
         String singleWarning = "[{\"warningCode\":\"Code103\","
-            + "\"warningText\":\"Warning Text 103\"}]";
+                               + "\"warningText\":\"Warning Text 103\"}]";
         WarningValues warningValues = new WarningValues(singleWarning);
 
         // check for warnings flag on both the tasks
         assertTaskHasMultipleWarnings(caseIdForTask1, task1Id, warningValues);
 
         // tear down all tasks
-        tearDownMultipleTasks(Arrays.asList(task1Id), "completed");
+        tearDownMultipleTasks(List.of(task1Id), "completed");
     }
 
     /**
@@ -288,11 +381,17 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
         String caseIdForTask1 = UUID.randomUUID().toString();
 
         // Initiate task1, category (timeExtension)
-        sendMessage(caseIdForTask1, "submitTimeExtension", null,
-                    "", false);
+        sendMessage(
+            caseIdForTask1,
+            "submitTimeExtension",
+            null,
+            "",
+            false,
+            "WA",
+            "WaCaseType"
+        );
 
-        Response response = findTasksByCaseId(
-            caseIdForTask1, 1);
+        Response response = findTasksByCaseId(caseIdForTask1, 1);
 
         String task1Id = response
             .then()
@@ -306,8 +405,15 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
         assertDelayDuration(responseTaskDetails);
 
         // initiate task2, category (followUpOverdue)
-        sendMessage(caseIdForTask1, "requestCaseBuilding", null,
-                    "caseBuilding", false);
+        sendMessage(
+            caseIdForTask1,
+            "requestCaseBuilding",
+            null,
+            "caseBuilding",
+            false,
+            "WA",
+            "WaCaseType"
+        );
 
         response = findTasksByCaseId(
             caseIdForTask1, 2);
@@ -320,11 +426,18 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
             .path("[1].id");
 
         // send warning message
-        sendMessage(caseIdForTask1, "_DUMMY_makeAnApplication104",
-                    "", "", false);
+        sendMessage(
+            caseIdForTask1,
+            "_DUMMY_makeAnApplication104",
+            "",
+            "",
+            false,
+            "WA",
+            "WaCaseType"
+        );
 
         String singleWarning = "[{\"warningCode\":\"Code104\","
-            + "\"warningText\":\"Warning Text 104\"}]";
+                               + "\"warningText\":\"Warning Text 104\"}]";
 
         // check for warnings flag on both the tasks
         assertTaskHasMultipleWarnings(caseIdForTask1, task1Id, new WarningValues(singleWarning));
@@ -342,11 +455,17 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
         String caseIdForTask1 = UUID.randomUUID().toString();
 
         // Initiate task1, category (Case progression)
-        sendMessage(caseIdForTask1, "submitCase", null,
-                    "caseUnderReview", false);
+        sendMessage(
+            caseIdForTask1,
+            "submitCase",
+            null,
+            "caseUnderReview",
+            false,
+            "WA",
+            "WaCaseType"
+        );
 
-        Response response = findTasksByCaseId(
-            caseIdForTask1, 1);
+        Response response = findTasksByCaseId(caseIdForTask1, 1);
 
         String task1Id = response
             .then()
@@ -360,8 +479,15 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
         assertDelayDuration(responseTaskDetails);
 
         // initiate task2, category (Case progression)
-        sendMessage(caseIdForTask1, "submitCase", null,
-                    "caseUnderReview", false);
+        sendMessage(
+            caseIdForTask1,
+            "submitCase",
+            null,
+            "caseUnderReview",
+            false,
+            "WA",
+            "WaCaseType"
+        );
 
         response = findTasksByCaseId(
             caseIdForTask1, 2);
@@ -374,8 +500,15 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
             .path("[1].id");
 
         // send warning message
-        sendMessage(caseIdForTask1, "_DUMMY_makeAnApplication102",
-                    "", "", false);
+        sendMessage(
+            caseIdForTask1,
+            "_DUMMY_makeAnApplication102",
+            "",
+            "",
+            false,
+            "WA",
+            "WaCaseType"
+        );
 
         // check for warnings flag on both the tasks
         assertTaskWithoutWarnings(caseIdForTask1, task1Id, true);
@@ -393,11 +526,17 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
         String caseIdForTask1 = UUID.randomUUID().toString();
 
         // Initiate task1, category (Case progression)
-        sendMessage(caseIdForTask1, "submitCase", null,
-                    "caseUnderReview", false);
+        sendMessage(
+            caseIdForTask1,
+            "submitCase",
+            null,
+            "caseUnderReview",
+            false,
+            "WA",
+            "WaCaseType"
+        );
 
-        Response response = findTasksByCaseId(
-            caseIdForTask1, 1);
+        Response response = findTasksByCaseId(caseIdForTask1, 1);
 
         String task1Id = response
             .then()
@@ -411,14 +550,21 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
         assertDelayDuration(responseTaskDetails);
 
         // send warning message
-        sendMessage(caseIdForTask1, "_DUMMY_makeAnApplication102",
-                    "", "", false);
+        sendMessage(
+            caseIdForTask1,
+            "_DUMMY_makeAnApplication102",
+            "",
+            "",
+            false,
+            "WA",
+            "WaCaseType"
+        );
 
         // check for warnings flag on both the tasks
         assertTaskWithoutWarnings(caseIdForTask1, task1Id, true);
 
         // tear down all tasks
-        tearDownMultipleTasks(Arrays.asList(task1Id), "completed");
+        tearDownMultipleTasks(List.of(task1Id), "completed");
     }
 
     /**
@@ -429,11 +575,17 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
         String caseIdForTask1 = UUID.randomUUID().toString();
 
         // Initiate task1, category (timeExtension)
-        sendMessage(caseIdForTask1, "submitTimeExtension", null,
-                    "", false);
+        sendMessage(
+            caseIdForTask1,
+            "submitTimeExtension",
+            null,
+            "",
+            false,
+            "WA",
+            "WaCaseType"
+        );
 
-        Response response = findTasksByCaseId(
-            caseIdForTask1, 1);
+        Response response = findTasksByCaseId(caseIdForTask1, 1);
 
         final String task1Id = response
             .then()
@@ -443,21 +595,35 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
             .path("[0].id");
 
         // send warning message
-        sendMessage(caseIdForTask1, "_DUMMY_makeAnApplication105",
-                    "", "", false);
+        sendMessage(
+            caseIdForTask1,
+            "_DUMMY_makeAnApplication105",
+            "",
+            "",
+            false,
+            "WA",
+            "WaCaseType"
+        );
         waitSeconds(5);
-        sendMessage(caseIdForTask1, "_DUMMY_makeAnApplication106",
-                    "", "", false);
+        sendMessage(
+            caseIdForTask1,
+            "_DUMMY_makeAnApplication106",
+            "",
+            "",
+            false,
+            "WA",
+            "WaCaseType"
+        );
         waitSeconds(5);
 
         String singleWarning = "[{\"warningCode\":\"Code105\","
-            + "\"warningText\":\"Warning Text 105\"}]";
+                               + "\"warningText\":\"Warning Text 105\"}]";
 
         // check for warnings flag on both the tasks
         assertTaskHasMultipleWarnings(caseIdForTask1, task1Id, new WarningValues(singleWarning));
 
         // tear down all tasks
-        tearDownMultipleTasks(Arrays.asList(task1Id), "completed");
+        tearDownMultipleTasks(List.of(task1Id), "completed");
     }
 
     /**
@@ -468,11 +634,17 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
         String caseIdForTask1 = UUID.randomUUID().toString();
 
         // Initiate task1, category (followUpOverdue)
-        sendMessage(caseIdForTask1, "requestRespondentEvidence", null,
-                    "awaitingRespondentEvidence", false);
+        sendMessage(
+            caseIdForTask1,
+            "requestRespondentEvidence",
+            null,
+            "awaitingRespondentEvidence",
+            false,
+            "WA",
+            "WaCaseType"
+        );
 
-        Response response = findTasksByCaseId(
-            caseIdForTask1, 1);
+        Response response = findTasksByCaseId(caseIdForTask1, 1);
 
         String task1Id = response
             .then()
@@ -482,14 +654,21 @@ public class WarningEventHandlerControllerTest extends CaseEventHandlerControlle
             .path("[0].id");
 
         // send warning message
-        sendMessage(caseIdForTask1, "_DUMMY_makeAnApplication107",
-                    "", "", false);
+        sendMessage(
+            caseIdForTask1,
+            "_DUMMY_makeAnApplication107",
+            "",
+            "",
+            false,
+            "WA",
+            "WaCaseType"
+        );
 
         // check for warnings flag on both the tasks
         assertTaskWithoutWarnings(caseIdForTask1, task1Id, true);
 
         // tear down all tasks
-        tearDownMultipleTasks(Arrays.asList(task1Id), "completed");
+        tearDownMultipleTasks(List.of(task1Id), "completed");
     }
 
     public void assertTaskHasMultipleWarnings(String caseId, String taskId,
